fixed HomePageArticles overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,6 @@
 body {
     font-family: "Roboto", serif !important; 
     background-color: white !important;
-    overflow-x: hidden;
 }
 
 input::-webkit-outer-spin-button,
@@ -11,8 +10,10 @@ input::-webkit-inner-spin-button {
 }
 
   /* Home Page Section */
-.light {
-    padding-bottom: 85px;
+
+.row{
+    margin-right: 0;
+    margin-left: 0;
 }
 
 .light .postcard {
